Layout issues fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,8 @@ app-footer {
   width: 100%;
 }
 .shell-y {
-  grid-template-rows: 50px calc(100% - 50px) 100px;
+  grid-template-rows: 50px calc(100% - 50px);
 }
 .shell-x {
-  grid-template-rows: 100% 100px;
+  grid-template-rows: 100%;
 }
